--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,22 @@
 <html>
   <head>
-    <title>hi</title>
+    <title>Doupe Birdbox</title>
     <script data-main="{{ url_for('static', filename='js/main')}}" src="{{ url_for('static', filename='js/vendor/requirejs/require.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/application.css') }}">
   </head>
   <body>
     <div id="inputs">
-      Serial Port: <select type="list" name="portselect" id="#portselect"></select></br>
-      Sound Card: <select type="list" name="portselect" id="#portselect"></select></br>
-      Birdname: <input type="text" name="birdname" id="#birdname"></br>
-      Stimset A: <input type="text" name="stimsetb" id="#stimseta"></br>
-      Stimset B: <input type="text" name="stimsetb" id="#stimsetab"></br>
+      Serial Port: <select type="list" name="portselect" id="portselect"></select></br>
+      Sound Card: <select type="list" name="portselect" id="portselect"></select></br></br>
+      Mode: <select type="list" name="modeselect" id="modeselect"></select></br>
+      Birdname: <input type="text" name="birdname" id="birdname"></br>
+      Stimset A: <input type="text" name="stimsetb" id="stimseta"></br>
+      Stimset B: <input type="text" name="stimsetb" id="stimsetab"></br>
 
       <button type="button" id="gobutton">Go</button>
       <button type="button" id="stopbutton">Stop</button>
+      <button type="button" id="resetbutton">Reset</button>
     </br>
     </div>
     <div id="rates"></div>
