bunch of improvennts to web gui and started a bird

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,11 @@
   </head>
   <body>
     <div id="inputs">
-      <!--
-      Sound Card: <select type="list" name="portselect" id="portselect"></select></br></br>
-      Mode: <select type="list" name="modeselect" id="modeselect"></select></br>
       Birdname: <input type="text" name="birdname" id="birdname"></br>
       Stimset A: <input type="text" name="stimsetb" id="stimseta"></br>
-      Stimset B: <input type="text" name="stimsetb" id="stimsetab"></br>
-
-      <button type="button" id="gobutton">Go</button>
-      <button type="button" id="stopbutton">Stop</button>
-      <button type="button" id="resetbutton">Reset</button>
-      -->
-    </div>
+      Stimset B: <input type="text" name="stimsetb" id="stimsetab"></br>    
+    </div></br>
+    <div id ="buttons"></div></br>
     <div id="rates"></div>
   </body>
 
