a bunch of fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/application.css') }}">
   </head>
   <body>
+    <div id ="box_select"></div></br>
     <div id="inputs">
       Birdname: <input type="text" name="birdname" id="birdname"></br>
       Stimset A: <input type="text" name="stimsetb" id="stimseta"></br>
       Stimset B: <input type="text" name="stimsetb" id="stimsetab"></br>    
     </div></br>
+    <div id = "testbuttons"></div></br>
     <div id ="buttons"></div></br>
     <div id="rates"></div>
   </body>
